objects/Filling_Fees__c.object
<CustomObject>
    <fields>
        <fullName>AlabamaCorp__c</fullName>
        <defaultValue>180</defaultValue>
        <description>Alabama Corp Filing Fees</description>
        <label>Alabama Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AlaskaCorp__c</fullName>
        <defaultValue>250</defaultValue>
        <description>Alaska Corp Filing Fees</description>
        <label>Alaska Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArizonaCorp__c</fullName>
        <defaultValue>95</defaultValue>
        <description>Arizona Corp Filing Fees</description>
        <label>Arizona Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArkansasCorp__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Arkansas Corp Filing Fees</description>
        <label>Arkansas Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CaliforniaCorp__c</fullName>
        <defaultValue>193</defaultValue>
        <description>California Corp Filing Fees</description>
        <label>California Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ColoradoCorp__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Colorado Corp Filing Fees</description>
        <label>Colorado Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConnecticutCorp__c</fullName>
        <defaultValue>250</defaultValue>
        <description>Connecticut Corp Filing Fees</description>
        <label>Connecticut Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelawareCorp__c</fullName>
        <defaultValue>89</defaultValue>
        <description>Delaware Corp Filing Fees</description>
        <label>Delaware Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FloridaCorp__c</fullName>
        <defaultValue>79</defaultValue>
        <description>Florida Corp Filing Fees</description>
        <label>Florida Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GeorgiaCorp__c</fullName>
        <defaultValue>150</defaultValue>
        <description>Georgia Corp Filing Fees</description>
        <label>Georgia Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HawaiiCorp__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Hawaii Corp Filing Fees</description>
        <label>Hawaii Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IdahoCorp__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Idaho Corp Filing Fees</description>
        <label>Idaho Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IllinoisCorp__c</fullName>
        <defaultValue>281</defaultValue>
        <description>Illinois Corp Filing Fees</description>
        <label>Illinois Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndianaCorp__c</fullName>
        <defaultValue>97</defaultValue>
        <description>Indiana Corp Filing Fees</description>
        <label>Indiana Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IowaCorp__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Iowa Corp Filing Fees</description>
        <label>Iowa Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KansasCorp__c</fullName>
        <defaultValue>85</defaultValue>
        <description>Kansas Corp Filing Fees</description>
        <label>Kansas Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KentuckyCorp__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Kentucky Corp Filing Fees</description>
        <label>Kentucky Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LouisianaCorp__c</fullName>
        <defaultValue>75</defaultValue>
        <description>Louisiana Corp Filing Fees</description>
        <label>Louisiana Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaineCorp__c</fullName>
        <defaultValue>145</defaultValue>
        <description>Maine Corp Filing Fees</description>
        <label>Maine Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarylandCorp__c</fullName>
        <defaultValue>217</defaultValue>
        <description>Maryland Corp Filing Fees</description>
        <label>Maryland Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MassachusettsCorp__c</fullName>
        <defaultValue>275</defaultValue>
        <description>Massachusetts Corp Filing Fees</description>
        <label>Massachusetts Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MichiganCorp__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Michigan Corp Filing Fees</description>
        <label>Michigan Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinnesotaCorp__c</fullName>
        <defaultValue>155</defaultValue>
        <description>Minnesota Corp Filing Fees</description>
        <label>Minnesota Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MississippiCorp__c</fullName>
        <defaultValue>87</defaultValue>
        <description>Mississippi Corp Filing Fees</description>
        <label>Mississippi Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MissouriCorp__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Missouri Corp Filing Fees</description>
        <label>Missouri Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MontanaCorp__c</fullName>
        <defaultValue>70</defaultValue>
        <description>Montana Corp Filing Fees</description>
        <label>Montana Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NebraskaCorp__c</fullName>
        <defaultValue>65</defaultValue>
        <description>Nebraska Corp Filing Fees</description>
        <label>Nebraska Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NevadaCorp__c</fullName>
        <defaultValue>755</defaultValue>
        <description>Nevada Corp Filing Fees</description>
        <label>Nevada Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_HampshireCorp__c</fullName>
        <defaultValue>102</defaultValue>
        <description>New Hampshire Corp Filing Fees</description>
        <label>New Hampshire Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_JerseyCorp__c</fullName>
        <defaultValue>129</defaultValue>
        <description>New Jersey Corp Filing Fees</description>
        <label>New Jersey Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Mexico_Corp__c</fullName>
        <defaultValue>100</defaultValue>
        <inlineHelpText>New Mexico Corp Filing Fees</inlineHelpText>
        <label>New Mexico Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_York_Corp__c</fullName>
        <defaultValue>145</defaultValue>
        <description>New York Corp Filing Fees</description>
        <externalId>true</externalId>
        <label>New York Corp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Filling Fees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Filling_Fees</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Filling Fees Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filling Fees</pluralLabel>
    <recordTypes>
        <fullName>Filling_Fees_List</fullName>
        <active>true</active>
        <label>Filling Fees List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>